--- a/comp1238.md
+++ b/comp1238.md
@@ -2,21 +2,21 @@
 - One writing system can be used by many languages
 - Cuneiform looks weird
 - The Epic of Gilgamesh was epic
-## Week 2 - Bits and BytesOne 
-- Writing System Can Be Used by Many Languages
-- Cuneiform Looks Weird
+## Week 2 - Bits and Bytes
+- Writing system can Be used by many languages
+- Cuneiform looks weird
 ## Week 3 - Text Structure
 - It’s important to know how to handle special characters in text
 - Understanding the differences between Markdown and HTML is crucial
 ## Week 4 - Keyboards and Editors
-- Mastering Keyboard Shortcuts Can Be Overwhelming
-- Regex Can Be Complex and Confusing
-- Learning Advanced Text Editors is Daunting
+- Mastering keyboard shortcuts can Be overwhelming
+- Regex can be complex and confusing
+- Learning advanced text editors is daunting
 ## Week 5 - CLI
-- The Steep Learning Curve of CLI Commands
-- Complexity of Scripting and Automation
-- Understanding Remote Access and Security Protocols
+- The steep learning curve of CLI commands
+- Complexity of scripting and automation
+- Understanding remote access and security protocols
 ## Week 6 - git
-- Navigating Git Commands Can Be Daunting
-- Understanding Branching and Merging is Complex
-- Crafting Clear Commit Messages is Crucial
+- Navigating git commands can be daunting
+- Understanding branching and merging is complex
+- Crafting clear commit messages is crucial
